Fix text overflow in sex field

--- a/frontend/src/app/modules/auth/sign-up/sign-up.component.sass
+++ b/frontend/src/app/modules/auth/sign-up/sign-up.component.sass
@@ -23,3 +23,9 @@
 
 ::ng-deep.mat-mdc-form-field-input-control
     margin-top: 8px !important
+
+::ng-deep.ng-value-container, ::ng-deep.ng-value
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
+    max-width: 85% !important
